Bug 154507 - does not display postscript images in dvi
Summary: does not display postscript images in dvi
Status: RESOLVED FIXED
Alias: None
Product: okular
Classification: Applications
Component: DVI backend (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Okular developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-23 03:06 UTC by is
Modified: 2007-12-31 01:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description is 2007-12-23 03:06:55 UTC
Version:           SVN (2007.12.22) (using KDE Devel)
Installed from:    Compiled sources
Compiler:          gcc version 4.2.3 20071123 (prerelease) (Debian 4.2.2-4) 
OS:                Linux

Kdvi, like xdvi before it, would render embedded eps graphics when displaying a file.  Okular just shows an greybox and a portion of the filename (not even the whole thing).  This is a major regression which significantly limits the utility of okular to TeX writers.
Comment 1 Pino Toscano 2007-12-31 01:24:31 UTC
SVN commit 754951 by pino:

Patch by Luigi Toscano <luigi.toscano@tiscali.it> to reactivate the rendering of postscript specials.
Thanks Luigi.
CCMAIL: luigi.toscano@tiscali.it

BUG: 154507


 M  +1 -1      dviRenderer.cpp  
 M  +11 -10    psgs.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=754951