Patch by Luigi Toscano <luigi.toscano@tiscali.it> to reactivate the rendering of postscript specials. Thanks Luigi. CCMAIL: luigi.toscano@tiscali.it

BUG: 154507

svn path=/trunk/KDE/kdegraphics/okular/; revision=754951